[gd_scene load_steps=2 format=3 uid="uid://d1kp7kukj0frb"]

[ext_resource type="Script" path="res://Scripts/menu/level_menu.gd" id="1_escnu"]

[node name="Level_menu" type="Node2D"]
script = ExtResource("1_escnu")

[node name="level_1" type="Button" parent="."]
offset_left = 99.0
offset_top = 142.0
offset_right = 184.0
offset_bottom = 178.0
text = "1"

[node name="level_2" type="Button" parent="."]
offset_left = 248.0
offset_top = 144.0
offset_right = 333.0
offset_bottom = 180.0
text = "2"

[node name="level_3" type="Button" parent="."]
offset_left = 405.0
offset_top = 143.0
offset_right = 490.0
offset_bottom = 179.0
text = "3"

[connection signal="pressed" from="level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level_3" to="." method="_on_level_3_pressed"]
